# algorithm

./: .gitignore  4img.sh  5img.sh  6img.sh  Makefile  README.md  arraysize.c  avm1.sh  avm20.sh  burn.sh  copy.sh  endian.c  findnum.c  list.c  list.h  new.sh  new_burn.sh  rtph264pay.txt  sum_abs.c  test.sh  up_usb_net.sh  usb_cmd.sh  xpt_burn.sh  xpt_burn_kernel.sh  yuyv2png_4.py  yuyv2png_5.py
ActivityTest/app/: build.gradle
C/: .bubble_sort.c.swp  Case015.c  bubble_sort.c  celebrity.c  char2int.c  makecase015  reverse_single_list.c  sum_abs.c
C/MS100/: Case001  Case002  Case003  Case003.c  Case004  Case009  Case010.c  Case011.c  Case014.c  Case016.c  Case017.c  Case019.c  Case020.c  Case022.c  Case023.c  Case025.c  Case056  Case056.c  Makefile  binary_tree.c  main.c  makecase015
CMake_learning/: CMakeCache.txt  CMakeLists.txt  Makefile  TutorialConfig.h.in  cmake_install.cmake
CMake_learning/MakeTable/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  MakeTable.c  Makefile  cmake_install.cmake
CMake_learning/Tutorial/: CMakeCache.txt  CMakeLists.txt  TutorialConfig.h  tutor.c  tutorial.c
Deques_and_Randomized_Queues/src/: Deque.java  Permutation.java  RandomizedQueue.java
FragmentTest/app/: build.gradle
RecycleViewTest/app/: build.gradle
UIBestPractice/app/: build.gradle
UILayoutTest/app/: proguard-rules.pro
androidReceiver/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  rtpreceiver  rtpreceiver.cpp
androidReceiver/h264depay/: CMakeLists.txt  Makefile  cmake_install.cmake  rtph264depay.c  rtph264depay.h
androidReceiver/rtph264depay/: CMakeLists.txt  Makefile  RtpH264Depay.cpp  RtpH264Depay.h  cmake_install.cmake  gstbitreader.h  gstrtph264depay.c  rtph264depay.c
android_app/AndroidThreadTest/: gradle.properties
android_app/CameraPreview/: gradle.properties
android_app/CoolWeather/: gradle.properties
android_app/DatabaseTest/: gradle.properties
android_app/MaterialTest/: gradle.properties
android_app/NetworkTest/: gradle.properties
android_app/PlayAudioTest/: gradle.properties
android_app/PlayVideoTest/: gradle.properties
android_app/RuntimePermissionTest/: gradle.properties
android_app/ServiceTest/: gradle.properties
android_app/WebViewTest/: gradle.properties
android_app/avm_ctrl/: gradle.properties
android_app/camera_control/: gradle.properties
android_app/crossAnroid/: cscope.files  cscope.out  tags
android_app/gladiusCamera/: VirtualCamera.java
android_app/mega/: Android.mk  AndroidManifest.xml
cplusplus/: adb_init  adb_init.c  adb_init.cpp
cppAndroidReceiver/: CMakeCache.txt  CMakeLists.txt  H264Decoder.cpp  H264Decoder.h  Makefile  RtpH264Depay.cpp  RtpH264Depay.h  cmake_install.cmake  h264decoder.cpp  h264decoder.h  log  main.c  receiver.txt  rtpreceiver  rtpreceiver.cpp
cppAndroidReceiver/socket/: Makefile  cmake_install.cmake
gst_camera/: CMakeCache.txt  CMakeLists.txt  Makefile  camera  cmake_install.cmake  get_streaming_video.c  log
gstreamer/: basic-tutorial-1  basic-tutorial-1.c  basic-tutorial-2  basic-tutorial-2.c  basic-tutorial-3.c  basic-tutorial-4.c  build.sh  compile.sh
java/: Array.java  LearnString.java  PrimitiveTypeTest.java  普林斯顿算法课java环境配置.pages
java/HeapSort/: HeapSort.java
java/JAVA_Learning/: AnimalInterface.java  HelloApplet.java  HelloWorld.java  LearnDate.java  MammalInterface.java  Puppy.java  RegexLearn.java  StreamIO.java  polymorphism.java
java/MS100/: Case1.java
java/Search/: BinarySearch.java  SequentialSearch.java
java/SortFunc/: BubbleSort.java  HeapSort.java  InsertSort.java  MergeSort.java  QuickSort.java  RadixSort.java  SelectSort.java  ShellSort.java
java/Union-Find/: Percolation.java  SocialNetworkCon.java  SuccessorWithDelete.java  UnionFindWithSpecificCanonicalElement.java
python/: algorithm.py  dijkstra.py  greedy_algo.py  quick_sort.py  search_queue.py
receiveRTP/: CMakeLists.txt  H264Decoder.cpp  Makefile  RtpH264Depay.h  main.cpp  receiver
receiveRTP/socket/: CMakeLists.txt  Makefile
saveReceiveRTP/: Makefile  main.cpp  receiver  rtph264.c
saveReceiveRTP/socket/: Makefile
screensharing/: .gitignore  README.md  rungst.sh
screensharing/app/: build.gradle  proguard-rules.pro
scripts/: build.sh  build_kernel.sh  burn.sh  cross_compile.sh  envset.sh  init_usb.sh  init_usb_ffs.sh  init_usb_ffs_v1.sh  kernel_menucnf.sh  kill_bitbake.sh
scripts/python/: fbtool.py  flashimage.py  flashproc.py
udp-image-streaming/: CMakeCache.txt  CMakeLists.txt  Makefile  Server.cpp  client  cmake_install.cmake  config.h  log  server  video1
v4l2/: 1img.sh  2img.sh  3img.sh  7img.sh  8img.sh  camera.sh  camera_hp.cpp  camera_mmu_dgb.cpp  camera_new.cpp  camera_rgb.cpp  camera_rgb565.cpp  camera_yuyv.cpp  camera_yuyv1.cpp  compile_yuyv.sh  cscope.files  exec_cmd.sh  get_and_trans_img.sh  get_img.sh  learning_camera.cpp  local  mtk  mtk_yuyv  mtkpic  newimg.sh  openCamera  openCamera.cpp  udp_mtk  user_camera.sh  v4l-utils  yuyv2png.py  yuyv2png_2.py  yuyv2png_4.py  yuyv2pnt_3.py
v4l2/avm/: CMakeLists.txt  libutils.c  run.sh
v4l2/avm4udp/: CMakeLists.txt  app_main.c  avm_common.h  gst_func.c  killblack.sh  libavm_blacksesame.c  libutils.c  newrun.sh  run.sh
v4l2/avm4udp_new/: app_main.c  avm_common.h  gst_appsrc.c  gst_func.c  local_run.sh
v4l2/avm_1227/: CMakeLists.txt  \  app_main.c  app_main.c.enqueue  app_main.c.right  avm.sh  cross.txt  libavm_blacksesame.c  libavm_blacksesame.h  libutils.c  log  run.sh  usb_camera.sh
v4l2/avm_origin/: CMakeCache.txt  GTmapping.txt  LUT.txt  LUT_birdeye.txt  LUT_offaxis.txt  LUT_offaxis_180.txt  Makefile  ReadMe.txt  app_main.c  app_main_back.c  avm_blacksesame  avm_common.h  cmake_install.cmake  gst_appsrc  log  parameter.txt  view.sh
v4l2/camera/: usb_cmd.sh
v4l2/cpp/: camera.cpp  camera_yuyv.cpp  newyuyv.cpp  test_write.cpp
v4l2/new_camera/: camera_time.cpp  compile_yuyv.sh  libutils.c  mtk_yuyv
v4l2/python/: first.data  second.data  uyuv2png.py  (+2 more)
vimconf/: .bashrc  .tmux.conf  .vimrc  build_xpt.sh
(+448 files in other folders)
